--- a/popup/src/template/popup.ejs
+++ b/popup/src/template/popup.ejs
@@ -3,13 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Lounasjuna</title>
+  <title><%= htmlWebpackPlugin.options.title %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
-<div id="app"></div>
-
-<script src="popup.js"></script>
+  <main id="app"></main>
 </body>
 </html>
