--- a/content/src/styles/content.css
+++ b/content/src/styles/content.css
@@ -85,53 +85,138 @@ button.lj-button.active:hover {
   font-weight: bold;
 }
 
+.hide {
+  display: none;
+}
+
 /* rc-number-input Overrides */
 
-.rc-input-number {
-  border-radius: 0 !important;
-  height: 36px !important;
-  border: 0 !important;
+.lj-input-number {
+  margin: 0;
+  padding: 0;
+  line-height: 26px;
+  display: inline-block;
+  vertical-align: middle;
+  border-radius: 0;
+  height: 36px;
+  border: 0;
   outline: 0;
   background-color: var(--lj-button-text-white);
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16), 0 2px 5px 0 rgba(0, 0, 0, 0.26);
   transition: all .3s;
+  font-size: 14px;
 }
 
-.rc-input-number-input {
-  height: 38px !important;
+.lj-input-number-input {
+  height: 38px;
 }
 
-.rc-input-number-handler-wrap {
+.lj-input-number-handler {
+  height: 18px;
+  line-height: 16px;
+  border: 0;
+  text-align: center;
+  overflow: hidden;
+  display:block;
+  touch-action: none;
+}
+
+.lj-input-number-input {
+  width: 100%;
+  text-align: center;
+  outline: 0;
+  -moz-appearance: textfield;
+  line-height: 26px;
+  height: 38px;
+  transition: all 0.3s ease;
+  color: #666666;
+  border: 0;
+  border-radius: 5px;
+  padding: 0;
+}
+
+.lj-input-number-input-wrap {
+   overflow: hidden;
+   height: 26px;
+}
+
+.lj-input-number-handler-wrap {
   background-color: var(--lj-button-blue);
   color: white;
-  height: 36px !important;
-  width: 24px !important;
+  height: 36px;
+  width: 24px;
+  overflow: hidden;
+  float: right;
 }
 
-.rc-input-number-handler {
-  height: 18px !important;
-  line-height: 16px !important;
-  border: 0 !important;
+.lj-input-number:first-of-type > .lj-input-number-handler-wrap {
+  float: left;
 }
 
-.rc-input-number-handler-wrap {
-  border: 0 !important;
+.lj-input-number-handler-up-inner,
+.lj-input-number-handler-down-inner {
+   color: #666666;
+   user-select: none;
+   -webkit-user-select: none;
 }
 
-.rc-input-number-handler-up-inner:after,
-.rc-input-number-handler-down-inner:after {
+.lj-input-number-handler-active {
+  background: var(--lj-background-blue);
+}
+
+.lj-input-number-handler-wrap {
+  border: 0;
+}
+
+.lj-input-number-handler-up {
+  padding-top: 1px;
+}
+
+.lj-input-number-handler-up-inner:after {
+   content: '+';
+}
+
+.lj-input-number-handler-down-inner:after {
+  content: '-';
+}
+
+.lj-input-number-handler-up-inner:after,
+.lj-input-number-handler-down-inner:after {
   color: white;
   font-weight: bold;
 }
 
-.rc-input-number:first-of-type > .rc-input-number-handler-wrap {
-  float: left;
+.lj-input-number-handler-down-disabled,
+.lj-input-number-handler-up-disabled {
+  opacity: 0.5;
 }
 
-.rc-input-number-handler-down-disabled, .rc-input-number-handler-up-disabled {
-  opacity: 0.5 !important;
+.lj-input-number-handler-down-disabled:hover,
+.lj-input-number-handler-up-disabled:hover {
+  color: #999;
+}
+
+/*
+
+.handler-disabled() {
+  opacity: 0.72;
+&:hover {
+   color: #999;
+   border-color: #d9d9d9;
+ }
 }
 
 
-
+&-disabled {
+.@{inputNumberPrefixCls}-input {
+                          opacity: 0.72;
+                          cursor: not-allowed;
+                          background-color: #f3f3f3;
+                        }
+.@{inputNumberPrefixCls}-handler {
+                        .handler-disabled();
+                        }
+}
+}
+*/
 
